/* Copyright 2019 Alexander Belinsky. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package energyplatform;

// Indicates system's task.
enum SystemTask {
    // Not set
    UNDEFINED = 0;
    // Feed forward calculation of system's product flow (process flow)
    FEED_FORWARD = 1;
    // Finds set of system's control params which enables system operates normally 
    // (in technological mode that satisfies all technological constraints)
    AVAILABLE_TECHNOLOGICAL_MODE = 2;  
    // Finds maximum system's througput
    MAX_THROUGHPUT = 3;
    // Simple task with fixed topology and 1 discrete control parameter. For test purposes.
    SIMPLE = 4;
} 